writing code for a new section in contact.html page

--- a/contact.html
+++ b/contact.html
@@ -111,16 +111,90 @@
     <!-- The wide map section starts -->
 
     <section class="wide-Map">
-        <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.66812192444593!2d3.3205490038016077!3d6.685275395166551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b974b4a2d0913%3A0x3f9a4146232f5f3!2sLady%20J%20Stores!5e0!3m2!1sen!2sng!4v1652890715499!5m2!1sen!2sng"
-        width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.66812192444593!2d3.3205490038016077!3d6.685275395166551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b974b4a2d0913%3A0x3f9a4146232f5f3!2sLady%20J%20Stores!5e0!3m2!1sen!2sng!4v1652890715499!5m2!1sen!2sng"
+            width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
     </section>
 
 
 
     <!-- The wide map section ends -->
+
+
+
+
+    <!-- The call on us us secction starts -->
+
+    <section class="call-On-Us">
+        <div class="container">
+
+            <h2 class="h2 section-title underline">Contact Us </h2>
+
+            <ul class="contact-Us">
+                <li class="contacting">
+                    <h1>Fell Free To Contact & Reach Us</h1>
+
+                    <p>The Church of the Lord is a place for you and I and please at anytime, you can reach out on us
+                        and be sure to get a response. Churches are not made up by only The Pastors, the Ministers or
+                        even the Teachers but the Church of the Lord is made up by you and I, your Relatives. your
+                        Neighbors and the entire socirty at large.</p>
+
+                    <div class="our-Contacts">
+                        <div class="locate">
+                            <ul class="locating">
+                                <li class="locate-one">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                </li>
+                                <li class="locate-one">
+                                    <h3>The Church Address:</h3>
+                                    <h5>
+                                        Oke-Aro, Ogun State, Along the road to Matogun and Otemuyi inside Federal
+                                        Republic of Nigeria</h5>
+                                </li>
+                            </ul>
+
+                            <ul class="locating">
+                                <li class="locate-one">
+                                    <i class="fas fa-phone"></i>
+                                </li>
+                                <li class="locate-one">
+                                    <h3>Toll Free Number:</h3>
+                                    <h5>
+                                         <a href="tel:+234-9012857304">Mobile-no: 0901-285-7304 // 0811-599-3636</a> <br>
+                                         <a href="tel:+2348115993636">Phone-no: +(234) 901 285 7304 // +(234) 811 599 3636</a>
+                                        </h5>
+                                </li>
+                            </ul>
+
+                            <ul class="locating">
+                                <li class="locate-one">
+                                    <i class="fas fa-phone"></i>
+                                </li>
+                                <li class="locate-one">
+                                    <h3>Email Address:</h3>
+                                    <h5>
+                                          <a href="https://www.github.com/Emzzy241">Website-url: www.github.com/Emzzy241</a> <br>
+                                         <a href="mailto:emzzyoluwole@gmail.com">Email-link: +(234) 901 285 7304 // +(234) 811 599 3636</a>
+                                        </h5>
+                                </li>
+                            </ul>
+
+                            
+
+                        </div>
+                    </div>
+                </li>
+
+
+            </ul>
+
+        </div>
+    </section>
+
+
+    <!-- The call on us us secction ends -->
 
 
 
