the locate section is finished

--- a/contact.html
+++ b/contact.html
@@ -170,7 +170,7 @@
 
                             <ul class="locating">
                                 <li class="locate-one">
-                                    <i class="fas fa-phone"></i>
+                                    <i class="fas fa-envelope"></i>
                                 </li>
                                 <li class="locate-one">
                                     <h3>Email Address:</h3>
@@ -184,6 +184,19 @@
                             
 
                         </div>
+                    </div>
+                </li>
+                <li class="contacting">
+                    <div class="cont-image">
+                        <form action="">
+                            <input type="text" placeholder="Enter Name*"> 
+                            <input type="email" name="" id="" placeholder="Enter Email*">
+                            <input type="text" placeholder="Enter Subject*">
+                            <input type="text" placeholder="Enter Phone No*">
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Enter Message*"></textarea>
+
+                            <a href="#" class="btn">Submit Now</a>
+                        </form>
                     </div>
                 </li>
 
