added more premium changes to website

--- a/contact.html
+++ b/contact.html
@@ -112,10 +112,9 @@
 
     <section class="wide-Map">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d247.66812192444593!2d3.3205490038016077!3d6.685275395166551!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b974b4a2d0913%3A0x3f9a4146232f5f3!2sLady%20J%20Stores!5e0!3m2!1sen!2sng!4v1652890715499!5m2!1sen!2sng"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126818.58981042632!2d3.1651922625000095!3d6.636871300000007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b91d4801c095b%3A0xf9c7bd6d31a75fe9!2sRccg%20Hope%20of%20glory%20lp%2010!5e0!3m2!1sen!2sng!4v1660103249820!5m2!1sen!2sng"
             width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade">
-        </iframe>
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
     </section>
 
 
@@ -157,46 +156,49 @@
 
                             <ul class="locating">
                                 <li class="locate-one">
-                                    <i class="fas fa-phone"></i>
+                                    <i class="fas fa-phone-volume"></i>
                                 </li>
                                 <li class="locate-one">
                                     <h3>Toll Free Number:</h3>
                                     <h5>
-                                         <a href="tel:+234-9012857304">Mobile-no: 0901-285-7304 // 0811-599-3636</a> <br>
-                                         <a href="tel:+2348115993636">Phone-no: +(234) 901 285 7304 // +(234) 811 599 3636</a>
-                                        </h5>
+                                        <a href="tel:+234-9012857304">Mobile-no: 0901-285-7304 // 0811-599-3636</a> <br>
+                                        <a href="tel:+2348115993636">Phone-no: +(234) 901 285 7304 // +(234) 811 599
+                                            3636</a>
+                                    </h5>
                                 </li>
                             </ul>
 
                             <ul class="locating">
                                 <li class="locate-one">
-                                    <i class="fas fa-envelope"></i>
+                                    <i class="fas fa-envelope-open-text"></i>
                                 </li>
                                 <li class="locate-one">
                                     <h3>Email Address:</h3>
                                     <h5>
-                                          <a href="https://www.github.com/Emzzy241">Website-url: www.github.com/Emzzy241</a> <br>
-                                         <a href="mailto:emzzyoluwole@gmail.com">Email-link: +(234) 901 285 7304 // +(234) 811 599 3636</a>
-                                        </h5>
+                                        <a href="https://www.github.com/Emzzy241">Website-url:
+                                            www.github.com/Emzzy241</a> <br>
+                                        <a href="mailto:emzzyoluwole@gmail.com">Email-link: +(234) 901 285 7304 //
+                                            +(234) 811 599 3636</a>
+                                    </h5>
                                 </li>
                             </ul>
 
-                            
+
 
                         </div>
                     </div>
                 </li>
-                <li class="contacting">
+                <li class="contacting rounded">
                     <div class="cont-image">
-                        <form action="">
-                            <input type="text" placeholder="Enter Name*"> 
+                        <!-- <form action="">
+                            <input type="text" placeholder="Enter Name*">
                             <input type="email" name="" id="" placeholder="Enter Email*">
                             <input type="text" placeholder="Enter Subject*">
                             <input type="text" placeholder="Enter Phone No*">
-                            <textarea name="" id="" cols="30" rows="10" placeholder="Enter Message*"></textarea>
+                            <textarea name="" id="" cols="30" rows="5" placeholder="Enter Message*"></textarea>
 
                             <a href="#" class="btn">Submit Now</a>
-                        </form>
+                        </form> -->
                     </div>
                 </li>
 
