--- a/about.html
+++ b/about.html
@@ -174,7 +174,7 @@
                 </li>
                 <li class="doing-one"> <br>
                     <div class="things">
-                        <i class="fas fa-water"></i>
+                        <i class="fas fa-faucet-drip"></i>
                         <p>Clean Water</p>
                     </div>
 
