--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 
             <div class="overlay" data-overlay></div>
 
-            <a href="#">
+            <a href="./index.html">
                 <h1 class="logo">H.O.G</h1>
             </a>
 
             <nav class="navbar" data-navbar>
                 <div class="navbar-top">
-                    <a href="" class="logo">H.O.G <br> Parish</a>
+                    <a href="./index.html" class="logo">H.O.G <br> Parish</a>
 
                     <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
                         <ion-icon name="close-outline"></ion-icon>
@@ -70,7 +70,7 @@
                         <a href="./about.html" class="navbar-link" data-navbar-link>About </a>
                     </li>
                     <li class="navbar-item">
-                        <a href="./about.html" class="navbar-link" data-navbar-link>Contact </a>
+                        <a href="./contact.html" class="navbar-link" data-navbar-link>Contact </a>
                     </li>
 
 
@@ -84,7 +84,7 @@
                 <span> Events</span>
             </a>
 
-            <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>a
+            <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
                 <ion-icon name="menu-outline"></ion-icon>
             </button>
         </div>
