--- a/volunteer.html
+++ b/volunteer.html
@@ -85,7 +85,7 @@
                 <span> Events</span>
             </a>
 
-            <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>a
+            <button class="nav-open-btn" aria-label="Open Menu" data-nav-open-btn>
                 <ion-icon name="menu-outline"></ion-icon>
             </button>
         </div>
