done with all pictures in index.html and volunteer.html

--- a/index.html
+++ b/index.html
@@ -650,7 +650,7 @@
 
                                 <figure class="banner">
                                     <a href="###">
-                                        <img src="./img/3WhiteRockandRole.jpg" alt="" width="750" height="350"
+                                        <img src="./img/Delilah-1.webp" alt="" width="750" height="350"
                                             loading="lazy" class="img-cover">
                                     </a>
                                 </figure>
@@ -699,7 +699,7 @@
 
                                 <figure class="banner">
                                     <a href="###">
-                                        <img src="./img/12.jpg" alt="" width="750" height="350" loading="lazy"
+                                        <img src="./img/solomon-2.jpg" alt="" width="750" height="350" loading="lazy"
                                             class="img-cover">
                                     </a>
                                 </figure>
@@ -748,7 +748,7 @@
 
                                 <figure class="banner">
                                     <a href="###">
-                                        <img src="./img/3WhiteRockandRole.jpg" alt="" width="750" height="350"
+                                        <img src="./img/jesus-2.jpg" alt="" width="750" height="350"
                                             loading="lazy" class="img-cover">
                                     </a>
                                 </figure>
@@ -797,7 +797,7 @@
 
                                 <figure class="banner">
                                     <a href="###">
-                                        <img src="./img/9swaggystyles.jpg" alt="" width="750" height="350"
+                                        <img src="./img/apostle-Paul.jpg" alt="" width="750" height="350"
                                             loading="lazy" class="img-cover">
                                     </a>
                                 </figure>
