--- a/blog.html
+++ b/blog.html
@@ -50,7 +50,7 @@
 
                     <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
                         <ion-icon name="close-outline"></ion-icon>
-                    </button>
+                    </button> <br>
                 </div>
 
                 <ul class="navbar-list">
