--- a/blog.html
+++ b/blog.html
@@ -45,7 +45,7 @@
             </a>
 
             <nav class="navbar" data-navbar>
-                <div class="navbar-top">
+                <div class="navbar-top"> <br>
                     <a href="./index.html" class="logo">H.O.G <br> Parish</a>
 
                     <button class="nav-close-btn" aria-label="Close Menu" data-nav-close-btn>
